<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>berlangadiaz</groupId>
    <artifactId>VidForge-Downloader</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    
    <name>VidForge Downloader</name>
    <description>Una GUI para yt-dlp creada para la tarea DI01.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <exec.mainClass>berlangadiaz.vidforge.downloader.view.MainFrame</exec.mainClass>
    </properties>    
    <dependencies>
        <!-- https://mvnrepository.com/artifact/tools.jackson.core/jackson-core -->
        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>3.0.0-rc4</version>
            <type>jar</type>
        </dependency>
    </dependencies>    
    <build>
        <resources>
            <resource>
                <!-- Indica que la carpeta src/main/resources debe copiarse -->
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>        
        <plugins>
            <!-- Plugin para copiar recursos no filtrados (como imágenes) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>png</nonFilteredFileExtension>
                        <nonFilteredFileExtension>jpg</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <!-- Clase de entrada para el JAR ejecutable -->
                            <mainClass>berlangadiaz.vidforge.downloader.view.MainFrame</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>   
</project>